@@ -53,14 +53,17 @@ namespace components
 
 	class components_list:public enumerator<components_list, component::get_info>
 	{
+		IMPLEMENTS_ENUMERATOR(components_list);
+
 	public:
 		void add(component* item);
 		bool empty() const { return list != nullptr; }
 		size_t size() const { return m_size; }
-		bool get(size_t index, value_type& value) const;
 
 	private:
 		friend components_list& GetComponentsList();
+
+		bool get(size_t index, value_type& value) const;
 
 		components_list();
 
