@@ -60,10 +60,9 @@ static bool SidToName(PSID Sid, string& Name, const string& Computer)
 	}
 	else
 	{
-		wchar_t* Ptr;
-		if(ConvertSidToStringSid(Sid, &Ptr))
+		os::memory::local::ptr<wchar_t> StrSid;
+		if(ConvertSidToStringSid(Sid, &ptr_setter(StrSid)))
 		{
-			const auto StrSid = os::memory::local::ptr(Ptr);
 			Name = StrSid.get();
 			Result = true;
 		}
@@ -155,20 +154,15 @@ bool SetOwnerInternal(const string& Object, const string& Owner)
 {
 	bool Result = false;
 
-	PSID Ptr = nullptr;
-	os::memory::local::ptr_t<void> Sid;
-	if (ConvertStringSidToSid(Owner.data(), &Ptr))
-	{
-		Sid.reset(Ptr);
-	}
-	else
+	os::memory::local::ptr<void> Sid;
+	if (!ConvertStringSidToSid(Owner.data(), &ptr_setter(Sid)))
 	{
 		SID_NAME_USE Use;
 		DWORD cSid=0, ReferencedDomain=0;
 		LookupAccountName(nullptr, Owner.data(), nullptr, &cSid, nullptr, &ReferencedDomain, &Use);
 		if(cSid)
 		{
-			Sid = os::memory::local::alloc<PSID>(LMEM_FIXED, cSid);
+			Sid = os::memory::local::alloc<SID>(LMEM_FIXED, cSid);
 			if(Sid)
 			{
 				std::vector<wchar_t> ReferencedDomainName(ReferencedDomain);
