@@ -1,3 +1,9 @@
+drkns 01.12.2016 22:11:17 +0200 - build 4864
+
+1. Неверный путь для ".." на панели в списке экранов по F12
+
+2. Мелкий рефакторинг.
+
 drkns 29.11.2016 21:50:31 +0200 - build 4863
 
 1. Падение при вызове меню ассоциаций, если ассоциации отсутствовали.
